third_party/rust/chromium_crates_io/vendor/async-trait-v0_1/tests/ui/type-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/type-mismatch.rs:14:9
   |
14 |         0
   |         ^ expected `()`, found integer

error[E0308]: mismatched types
  --> tests/ui/type-mismatch.rs:17:9
   |
17 |         0
   |         ^ expected `()`, found integer
